mudando tudo para a mesma rota

--- a/src/pages/projetos/Projetos.css
+++ b/src/pages/projetos/Projetos.css
@@ -22,6 +22,7 @@
     transition: 0.7s;
 }
 .main-projeto{
+    padding-top: 5em;
     color: white;
     display: flex;
     flex-direction: column;
