--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -33,7 +33,6 @@ a{
     padding: 0.5em ;
     background: transparent;
     border: 1px solid white;
-    border-radius: 2em;
 }
 .button:hover{
     background-color: white;
@@ -78,7 +77,7 @@ img:hover{
 #sobre{
     width: 80%;
    color: white;
-   margin-top: 6em;
+   padding-top: 9em;
    margin-left: 3em;
    margin-bottom: 10em;
 }
