--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -111,7 +111,8 @@ img:hover{
 
 @media(max-width : 820px){
     .header-container{
-        width: 80%
+        width: 70%;
+        
     };
     #sobre {
         width: 80%;
