--- a/src/pages/projetos/Projetos.css
+++ b/src/pages/projetos/Projetos.css
@@ -71,6 +71,9 @@
 }
 
 @media (max-width: 820px){
+    .cards{
+        width: 89%;
+    }
     .header-container-projeto{
         font-size: 1.5em;
         
