--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -111,7 +111,9 @@ img:hover{
 
 @media(max-width : 820px){
     .header-container{
-        width: 70%;
+        width: 65%;
+        padding: 1em;
+        padding-top: 3em
         
     };
     #sobre {
@@ -119,6 +121,7 @@ img:hover{
         color: black;
     }
     .main-container{
-        width: 90%;
+        width: 80%;
+        margin-left: 1em;
     }
 }
