--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -62,17 +62,14 @@ a{
     margin-top: 0.5em;
 }
 img{
-    border: 1px solid white;
+   
     padding: 5px;
     border-radius: 2em;
     margin-top: 3em;
-    cursor: pointer;
+  
     
 }
-img:hover{
-    background-color: white;
-    transition: 0.7s;
-}
+
 
 #sobre{
     width: 80%;
@@ -94,7 +91,7 @@ img:hover{
     padding: 0.5em ;
     background: transparent;
     border: 1px solid white;
-    border-radius: 2em;
+    border-radius: 0.2em;
     cursor: pointer;
 }
 #sobre button:hover{
@@ -107,6 +104,14 @@ img:hover{
     
     scroll-behavior: smooth;
    
+}
+.curriculo-btn{
+    text-decoration: none;
+    background-color: transparent;
+    color: white;
+}
+.curriculo-btn:hover{
+    color: black;
 }
 
 @media(max-width : 820px){
